# honeypot-orchestrator

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.lan.yml  docker-compose.yml  memory.md  pyproject.toml  setup.sh
backend/: Dockerfile  __init__.py  cli.py  config.py  crypto_utils.py  database.py  defense.py  event_logger.py  geo.py  go.mod  go.sum  models.py  net_tuner.py  orchestrator.py  profiles.py  requirements.txt  test_cpu.py  test_threat_intel.py  threat_intel.py  ti_worker.py
backend/api/: router.py
backend/certs/: dummy.pem
backend/core/: config.py  event_logger.py  mitre.py  siem_forwarder.py
backend/database/: database.py  models.py  repository.py
backend/honeypot_orchestrator/: config.py  orchestrator.py
backend/logs/: events.jsonl
backend/scripts/: generate_secret_key.py  migrate_to_pg.py  patch_server.py  start-lan.sh
backend/services/: __init__.py  base.py  dns.py  ftp.py  http.py  ldap.py  ldaps.py  llmnr.py  mssql.py  nbtnns.py  netbios.py  rdp.py  rpc.py  smb.py  ssh.py  telnet.py
backend/system/: net_tuner.py
backend/tests/: test_config.py  test_defense.py  test_orchestrator.py  test_services.py  (+2 more)
frontend/: index.html  login.html  nginx.conf  package.json  vite.config.js
honeypot_orchestrator/: cli.py  config.py  defense.py  event_logger.py  net_tuner.py  orchestrator.py  packet_mangler.py  profiles.py
logs/: honeypot.db
scratch/: find_style.py
scripts/: start-lan.sh
tests/: test_core.py  test_http_interactive.py  test_mssql_interactive.py  test_udp_services.py
(+112 files in other folders)
