[project]
name = "honeypot-orchestrator"
version = "0.1.0"
description = "Lab-only honeypot orchestrator with fake SSH, HTTP, FTP, and Telnet services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[project.scripts]
honeypot-orchestrator = "honeypot_orchestrator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"honeypot_orchestrator.web" = ["templates/*.html", "static/*.css", "static/*.js"]
